# elastic-study

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  logstash.conf  opencode.jsonc  pyproject.toml
configs/: POLICIES.md  dashboard_setup.sh  export.ndjson  filebeat.yml  opencode.jsonc
docs/: BENCHMARKING.md  LOGS.md  MCP.md  QUICK_START.md  RAG.md
scripts/: dashboard_setup.sh
src/agent_mcp/: api_routes.py  config.py  main.py  mcp_tools.py  operations.py
src/agent_proxy/: config.py  hydrate_agent.py  logger.py  main.py  models.py  proxy.py  routes.py  utils.py
src/agent_proxy/helpers/: es_cli.py  update_deps.py
src/agent_proxy/parsers/: __init__.py
src/agent_proxy/services/: dlp.py  elastic.py  proxy.py
src/agent_rag/: embedder.py  engine.py  llm_client.py  main.py  models.py  vector_store.py
src/llm_benchmark/: __init__.py  clients.py  engine.py  main.py  protocols.py  sinks.py
src/log_replay/: downloader.py  engine.py  logging.py  main.py  models.py  mordor.py  schemas.py
src/log_replay/host/: azure_linux.py  mordor.py  sysmon.py
src/log_replay/network/: suricata.py  suricata_orchestrator.py  zeek.py  zeek_pcap.py
src/proxy/: README.md  __init__.py  proxy.py
src/proxy/helpers/: docker_helper.py  es_cli.py  escli.html  update_deps.py
tools/: agent-eval.sh  calculator.html  eval.sh  rag-eval.sh
workspace/: game.py  log4shell_analysis_report.md  organize_files.py
