# =============================================================
# BUILD & PACKAGING
# =============================================================
[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

# =============================================================
# PROJECT METADATA
# =============================================================
[project]
name = "agent-proxy"
version = "0.1.0"
description = "Transparent HTTP proxy for OpenAI-compatible LLM APIs with Elasticsearch logging"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "httpx==0.28.1",
    "elasticsearch[async]==9.0.0",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
]

# =============================================================
# DEVELOPMENT & ENVIRONMENTS
# =============================================================
[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "respx==0.23.1",
    "ruff==0.15.12",
    "tomlkit==0.12.5",
    "hatch==1.16.5"
]

# =============================================================
# ENTRY POINTS
# =============================================================
[project.scripts]
# Console scripts mapped to CLI commands when the package is installed
start-proxy = "agent_proxy.proxy:start"
# Helpful utilities for development and debugging
docker-helper = "agent_proxy.helpers.docker_helper:main"
update-deps = "agent_proxy.helpers.update_deps:main"
es-cli = "agent_proxy.helpers.es_cli:main"

# =============================================================
# UV CONFIGURATION
# =============================================================
[tool.uv]
exclude-newer = "7 days"

# =============================================================
# SETUPTOOLS CONFIGURATION
# =============================================================
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# =============================================================
# PYTEST CONFIGURATION
# =============================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]

# =============================================================
# LINTING & FORMATTING (RUFF)
# =============================================================
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (imports)
    "UP",   # pyupgrade (modern python syntax)
    "B",    # flake8-bugbear (prevents common bugs)
    "SIM",  # flake8-simplify
]
ignore = [
   "E501", # line-length violations
   "W293", # blank line contains whitespace
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
