# =============================================================
# BUILD & PACKAGING
# =============================================================
[build-system]
requires = [
    "setuptools==81.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

# =============================================================
# PROJECT METADATA
# =============================================================
[project]
name = "agent-proxy"
version = "0.1.0"
description = "Transparent HTTP proxy for OpenAI-compatible LLM APIs with Elasticsearch logging"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "httpx==0.28.1",
    "elasticsearch[async]==9.0.0",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "opentelemetry-api==1.42.0",
    "opentelemetry-sdk==1.42.0",
    "opentelemetry-semantic-conventions==0.63b0",
]

# =============================================================
# OPTIONAL DEPENDENCIES
# =============================================================
[project.optional-dependencies]
# RAG
rag = [
    "sentence-transformers==5.5.0",
]

# Local Benchmarking
benchmark = [
    "torch==2.12.0",
    "transformers==5.8.1",
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "peft==0.19.1",
]

# Log Replay
log_replay = [
    "xmltodict==1.0.4",
]

# Agent MCP
agent_mcp = [
    "mcp[cli]==1.27.1",
    "tenacity==9.1.4",
]

# Development & Testing
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "respx==0.23.1",
    "ruff==0.15.12",
    "tomlkit==0.12.5",
    "hatch==1.16.5"
]

# =============================================================
# ENTRY POINTS
# =============================================================
[project.scripts]
# Console scripts mapped to CLI commands when the package is installed
start-proxy = "agent_proxy.main:start"

# Agent management
agent-hydrate = "agent_proxy.helpers.hydrate_agent:main"

# RAG Utilities
rag-ask = "agent_rag.main:ask"
rag-hydrate = "agent_rag.main:hydrate"
rag-hydrate-logs = "agent_rag.main:hydrate_logs"

# Benchmarking
benchmark-run = "llm_benchmark.main:start"
benchmark-hydrate = "llm_benchmark.main:hydrate"

# Log Replay
log-replay = "log_replay.main:main"

# Agent MCP
start-mcp = "agent_mcp.main:start"

# Helpful utilities for development and debugging
docker-helper = "agent_proxy.helpers.docker_helper:main"
update-deps = "agent_proxy.helpers.update_deps:main"
es-cli = "agent_proxy.helpers.es_cli:main"

# =============================================================
# UV CONFIGURATION
# =============================================================
[tool.uv]
exclude-newer = "7 days"

# =============================================================
# SETUPTOOLS CONFIGURATION
# =============================================================
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# =============================================================
# PYTEST CONFIGURATION
# =============================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]

# =============================================================
# LINTING & FORMATTING (RUFF)
# =============================================================
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (imports)
    "UP",   # pyupgrade (modern python syntax)
    "B",    # flake8-bugbear (prevents common bugs)
    "SIM",  # flake8-simplify
]
ignore = [
   "E501", # line-length violations
   "W293", # blank line contains whitespace
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
